<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/header_title_text"
        style="@style/TextHeaderWhiteBold"/>

    <TextView
        android:id="@+id/header_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/header_description_text"
        style="@style/TextSubHeaderLightGray"/>

    <!-- If the button can't be clicked there might be something in MainActivity.kt preventing it... -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/red_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="false"
        android:backgroundTint="@color/red"
        app:borderWidth="0dp"
        app:fabCustomSize="100dp"
        android:visibility="gone"
        android:contentDescription="@string/red_button_description" />

    <!-- your standard, much smaller, non-red button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tiny_yellow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/yellow"
        app:borderWidth="0dp"
        app:fabCustomSize="101dp"
        android:visibility="visible"
        android:contentDescription="@string/other_button_description"/>

    <!-- your standard, non-red button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/blue"
        app:borderWidth="0dp"
        app:fabCustomSize="101dp"
        android:visibility="gone"
        android:contentDescription="@string/other_button_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>