<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FinalActivity"
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/congrats_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/congrats_title_text"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/congrats_header_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/congrats_header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/congrats_title_description"
        style="@style/TextSubHeaderLightGray"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/congrats_header_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_rawRes="@raw/trophy"
        app:lottie_autoPlay="true"/>

    <TextView
        android:id="@+id/made_with_love_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/made_with_love_text"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfetti_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>